<resources>
    <string name="app_name">MyDoctor</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Good Morning</string>
    <string name="welcome">Welcome to your personal doctor!</string>
    <string name="User_label">User Name</string>
    <string name="password_label">Password</string>
    <string name="login">Doctor</string>
    <string name="email">Email</string>
    <string name="loginButton">Log in</string>
    <string name="registerButton">Register</string>
    <string name="please_enter_your_credentials">Please enter your credentials</string>
    <string name="labs">Labs</string>
    <string name="medications">Medications</string>
</resources>